syntax = "proto3";

option go_package ="/hrm";

import "employee_message.proto";

message CreateEmployeeRequest {
    // unique value for User
    string user_name = 1;
    // unique value for Organization 
    string organization_name = 2;
    // Employee role from Role
    string role_name = 3; 
    string creator_id = 4;
}

message CreateEmployeeResponse {
    string id = 1;
}

message Filter {
    string organization_name = 1;    
    string user_name =2; 
}

//  request using a filter
message FindEmployeeRequest { Filter filter = 1; }
message FindEmployeeResponse { Employee employee = 1; };

service EmployeeService {
    // create a user employed by the organization  
    rpc CreateEmployee(CreateEmployeeRequest) returns (CreateEmployeeResponse){};
    // search for an employees in the organization
    rpc FindEmployee(FindEmployeeRequest) returns (FindEmployeeResponse){};
}